# rpc-project

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: benchmark-report.md
examples/: CMakeLists.txt  log_test.cpp  rpc_benchmark.cpp  rpc_client.cpp  rpc_server.cpp  tcp_client_test.cpp  test.cpp  timer_epoller_test.cpp
include/: context.h  coroutine.h  epoller.h  json.h  log.h  logger.h  mempool.h  minico_api.h  mstime.h  mutex.h  objpool.h  parameter.h  processor.h  processor_selector.h  scheduler.h  socket.h  spinlock.h  spinlock_guard.h  timer.h  utils.h
include/rpc/: rpc_client.h  rpc_client_stub.h  rpc_header.h  rpc_server.h  rpc_server_stub.h  service.h
include/tcp/: tcp_client.h  tcp_server.h
scripts/: README.md  generate-flamegraph.sh  perf-diff.sh  perf-report.sh  perf-stat.sh  perf-top.sh
src/: CMakeLists.txt  context.cpp  coroutine.cpp  epoller.cpp  log.cpp  logger.cpp  main.cpp  minico_api.cpp  mstime.cpp  mutex.cpp  processor.cpp  processor_selector.cpp  scheduler.cpp  socket.cpp  timer.cpp
src/rpc/: rpc_client.cpp  rpc_client_stub.cpp  rpc_header.cpp  rpc_server.cpp  rpc_server_stub.cpp
src/tcp/: tcp_client.cpp  tcp_server.cpp
tests/: CMakeLists.txt  processor_smoke_test.cpp
